# where_do_gradient_methods_really_happen

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: cifar10_cnn3_sgd_bulk_loss.csv  cifar10_cnn3_sgd_dom_loss.csv  cifar10_cnn3_sgdm_dom_loss.csv  mnist_mlp3_muon_dom_loss.csv  mnist_mlp3_sgd_bulk_loss.csv  mnist_mlp3_sgd_dom_loss.csv  mnist_mlp3_sgdm_bulk_loss.csv
data/momentum_cifar_adam_expavg_layerwise_tangent_energy080_switch_1000_end_3000_upd1_3seeds/: experiment_config.json  history_aggregate.csv  history_all_seeds.csv  validation_aggregate.csv  validation_all_seeds.csv
data/momentum_cifar_adam_expavg_layerwise_tangent_energy080_switch_1000_end_3000_upd1_3seeds/seed_112/: cifar10_cnn3__adam__momentum_svd_layerwise_tangent__bulk.result.json  history.csv  summary.json  (+3 more)
experiments/: configs.py  mlflow_runner.py  prefetch_datasets.py  run.py  run_local.py  run_multiple_seeds.py
notebooks/: ablations.ipynb  analysis.ipynb  examples.ipynb
poster/: main.aux  main.bcf  main.tex  refs.bib  styles.tex
report/: project.tex  refs.bib  report.tex
src/: projectors.py
src/experiments/: __init__.py  plotting.py  runner.py  tasks.py
src/models/: cnn_cifar.py  data.py  gpt.py  mlp_mnist.py  resnet_cifar.py  transformer_sst.py  utils.py  vgg11_cifar.py
src/optimizers/: __init__.py  adam.py  adamw.py  forward_gradient.py  mezo.py  muon.py  sgd.py  sgdm.py  subzero.py  swa.py
src/projections/: __init__.py  adaptive_lr.py  base.py  eigenspace.py  gradient_covariance.py  hessian.py  momentum_matrix.py  random.py  stiefel.py  two_sided.py
(+12 files in other folders)
